fix aleo font loading issue, shrink divider spacing

--- a/src/components/Testimonial.css
+++ b/src/components/Testimonial.css
@@ -10,7 +10,7 @@
 	position: absolute;
 	top: -.8rem;
 	left: -2.8rem;
-	color: var(--gray-dark);
+	color: var(--primary-dark);
 	font-family: Aleo, serif;
 }
 
@@ -23,4 +23,5 @@
 
 .testimonial__author {
 	font-weight: 600;
+	color: var(--black);
 }
