--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -39,8 +39,7 @@ body {
 html {
 	font-size: 62.5%;
 	box-sizing: border-box;
-	width: 100vw;
-	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 body {
