--- a/src/components/shared/Divider.css
+++ b/src/components/shared/Divider.css
@@ -1,6 +1,6 @@
 .divider,
 .divider--angle {
-	height: 1.2rem;
+	height: .8rem;
 	width: 100%;
 	border-top: 1px solid var(--gray-dark);
 	border-bottom: 1px solid var(--gray-dark);
