--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -80,6 +80,7 @@
 .benefits__p2 {
 	text-transform: uppercase;
 	font-family: Aleo, serif;
+	color: var(--black);
 	letter-spacing: .1rem;
 	font-weight: 600;
 	font-size: 3.2rem;
